--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "mongodb": "^6.13.0"
+    "express": "^4.21.2",
+    "mongodb": "^6.13.0",
+    "morgan": "^1.10.0"
   }
 }
