--- a/api/package.json
+++ b/api/package.json
@@ -15,5 +15,12 @@
     "express": "^4.21.2",
     "mongodb": "^6.13.0",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.3",
+    "@types/express": "^5.0.0",
+    "@types/mongodb": "^4.0.7",
+    "@types/morgan": "^1.9.9"
   }
 }
