--- a/api/package.json
+++ b/api/package.json
@@ -2,12 +2,20 @@
   "name": "api",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "license": "MIT",
+  "author": {
+    "name": "Rodrigo Zan",
+    "email": "rodrigo.zandonadi.dev@gmail.com",
+    "url": "https://medium.com/code-write"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rodrigozan/ananse"
+  },
+  "scripts": {
+    "start:dev": "nodemon",
+    "build": "npx tsc"
+  },
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
@@ -21,6 +29,8 @@
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.0",
     "@types/mongodb": "^4.0.7",
-    "@types/morgan": "^1.9.9"
+    "@types/morgan": "^1.9.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
