--- a/.gitignore
+++ b/.gitignore
@@ -3,17 +3,17 @@
 /api/.env.production
 
 # Ignorar arquivos de ambiente do Angular
-/app/src/environments/environment.ts
-/app/src/environments/environment.prod.ts
+/web/src/environments/environment.ts
+/web/src/environments/environment.prod.ts
 
 # Ignorar node_modules em ambas as pastas
 /node_modules
-/app/node_modules
+/web/node_modules
 /api/node_modules
 
 # Ignorar pastas de build/dist
 /dist
-/app/dist
+/web/dist
 /api/dist
 
 # Ignorar cache e logs
